[package]
name = "codera1d-server"
version = "1.0.0"
authors = ["Sam Mauldin"]
edition = "2018"

[[bin]]
name = "codera1d-server"
path = "src/main.rs"

[dependencies]
rocket = "0.4.9"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
bincode = "1.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0.40"
rocket_contrib = "0.4.7"
lazy_static = "1.4.0"
roaring = "0.7.0"
base64 = "0.13.0"
